--- a/examples/pagemirror_extension/mirror.html
+++ b/examples/pagemirror_extension/mirror.html
@@ -13,6 +13,5 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-
-<script src="tree_mirror.js"></script>
+<script src="tree-mirror.js"></script>
 <script src="mirror.js"></script>
